fix alignment

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -351,7 +351,7 @@ color: $gray-light !important;
 /* comments */
 
 .comments {
-  max-width: 500px;
+  max-width: 1000px;
   margin-top: 15px;
   h4 {
     margin-bottom: 0px;
